# tsdk-wrap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  python_wrap.py  setup.py
pytsdk/: pytsdk.py
thermal/: CMakeLists.txt  impl.cpp  thermal.cpp  thermal.hpp  thermal.pyi
